force-app/main/default/objects/Innovation_Center_Engagement__c/Innovation_Center_Engagement__c.object-meta.xml
<CustomObject>
    <description>#SFSE-13341 : Object to store the Innovation Center Engagement Visits details like location, date of visit and customer details.</description>
    <label>Innovation Center Engagement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Innovation Center Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>