force-app/main/default/objects/Innovation_Center_Engagement__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SFSE-13341: Field to store customer details. This is lookup to Account object.</description>
    <inlineHelpText>Customer who visited Innovation Center.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Innovation Center Engagements</relationshipLabel>
    <relationshipName>Innovation_Center_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>