force-app/main/default/objects/Innovation_Center_Engagement__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <description>#SFSE-13341: Field to store date of visit to Innovation Center.</description>
    <inlineHelpText>Date on which Innovation center visit has happened.</inlineHelpText>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>