force-app/main/default/objects/Innovation_Center_Engagement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SFSE-13341: Field to store location of Innovation Center. This is a lookup to Geography object.</description>
    <inlineHelpText>Location of Innovation center.</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Geography__c.Type_Of_Location__c</field>
            <operation>equals</operation>
            <value>City</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Innovation Center Engagements</relationshipLabel>
    <relationshipName>Innovation_Center_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>