force-app/main/default/objects/Innovation_Center_Engagement__c/fields/Type_of_Audience__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Audience__c</fullName>
    <description>#SFSE-13341: Field to store type of audience who visited Innovation center. Indicate whether its Prospects,Customer,Government Agencies OR Sales Excellence Team.</description>
    <inlineHelpText>Type of audience who visited Innovation center.Indicate whether its Prospects,Customer,Government Agencies OR Sales Excellence Team.</inlineHelpText>
    <label>Type of Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospects</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Government Agencies</fullName>
            </value>
            <value>
                <fullName>Sales Excellence Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>