force-app/main/default/objects/Innovation_Center_Engagement__c/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Type_of_Audience__c</columns>
    <columns>Location__c</columns>
    <columns>Date_of_Visit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>