force-app/main/default/objects/Innovation_Center_Engagement__c/listViews/My_Innovation_Center_Engagements.listView-meta.xml
<ListView>
    <fullName>My_Innovation_Center_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Type_of_Audience__c</columns>
    <columns>Location__c</columns>
    <columns>Date_of_Visit__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Innovation Center Engagements</label>
</ListView>